Update overflow fix

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -20,9 +20,7 @@ body {
   font-family: var(--font-stack-1);
 
   &.mega-menu-is-open {
-    @media (--small-breakpoint-down) {
-      background: var(--color-3;)
-    }
+    overflow: hidden;
   }
 }
 
